# landlord

./: .gitignore  CMakeLists.txt  build.bat  client.bat  server.bat
client/: .gitignore  CMakeLists.txt  main.cpp
common/: .gitignore  CMakeLists.txt  card.cpp  card.h  combo.cpp  combo.h  main.cpp
common/tests/: combo.cpp
server/: .gitignore  main.cpp
